# serializer version: 1
# name: test_gt_plt_bar_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60px" height="30px"><rect x="0" y="5.0px" width="0.2px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="0.196px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left">one</td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60px" height="30px"><rect x="0" y="5.0px" width="4.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="3.92px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left">two</td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right"><div style="display: flex;"><svg xmlns="http://www.w3.org/2000/svg" width="60px" height="30px"><rect x="0" y="5.0px" width="60.0px" height="20px" fill="purple"/><text dominant-baseline="central" text-anchor="end" font-size="12.0" fill="white" x="58.8px" y="15.0px"/><line stroke="black" stroke-width="3.0px" x1="0" y1="0" x2="0" y2="30px"/></svg></div></td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left">three</td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_conf_int_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_left">A</td>
      <td class="gt_row gt_right"><div style="position:relative; width:80px; height:44px;">
              <div style="position:absolute;left:21.35593220338983px;bottom:15px;color:black;font-size:10px;">4</div>
              <div style="position:absolute;left:46.214689265536734px;bottom:15px;color:black;font-size:10px;transform:translateX(-100%);">6</div>
              <div style="
                  position:absolute; left:21.35593220338983px;
                  top:29.0px; width:24.858757062146903px;
                  height:4px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:29.78531073446328px;
                  top:26.0px; width:10px; height:10px;
                  background:red; border-radius:50%;
                  border:2px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">4.1</td>
      <td class="gt_row gt_right">6.3</td>
    </tr>
    <tr>
      <td class="gt_row gt_left">B</td>
      <td class="gt_row gt_right"><div style="position:relative; width:80px; height:44px;">
              <div style="position:absolute;left:52.99435028248588px;bottom:15px;color:black;font-size:10px;">7</div>
              <div style="position:absolute;left:73.33333333333333px;bottom:15px;color:black;font-size:10px;transform:translateX(-100%);">9</div>
              <div style="
                  position:absolute; left:52.99435028248588px;
                  top:29.0px; width:20.338983050847446px;
                  height:4px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:59.16384180790961px;
                  top:26.0px; width:10px; height:10px;
                  background:red; border-radius:50%;
                  border:2px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">6.9</td>
      <td class="gt_row gt_right">8.7</td>
    </tr>
    <tr>
      <td class="gt_row gt_left">C</td>
      <td class="gt_row gt_right"><div style="position:relative; width:80px; height:44px;">
              <div style="position:absolute;left:6.666666666666666px;bottom:15px;color:black;font-size:10px;">3</div>
              <div style="position:absolute;left:20.225988700564976px;bottom:15px;color:black;font-size:10px;transform:translateX(-100%);">4</div>
              <div style="
                  position:absolute; left:6.666666666666666px;
                  top:29.0px; width:13.55932203389831px;
                  height:4px; background:royalblue; border-radius:2px;
              "></div>
              <div style="
                  position:absolute; left:9.44632768361582px;
                  top:26.0px; width:10px; height:10px;
                  background:red; border-radius:50%;
                  border:2px solid red; box-sizing:border-box;
              "></div>
              </div></td>
      <td class="gt_row gt_right">2.8</td>
      <td class="gt_row gt_right">4.0</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_gt_plt_dot_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">0.1111</td>
      <td class="gt_row gt_left">apricot</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  one
                  <div style="height:0.7em; width:0.7em; background-color:#000000;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#000000; width:100.0%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-01-15</td>
      <td class="gt_row gt_right">13:35</td>
      <td class="gt_row gt_right">2018-01-01 02:22</td>
      <td class="gt_row gt_right">49.95</td>
      <td class="gt_row gt_left">row_1</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">2.222</td>
      <td class="gt_row gt_left">banana</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  two
                  <div style="height:0.7em; width:0.7em; background-color:#4cbd81;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#4cbd81; width:35.93593593593593%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-02-15</td>
      <td class="gt_row gt_right">14:40</td>
      <td class="gt_row gt_right">2018-02-02 14:33</td>
      <td class="gt_row gt_right">17.95</td>
      <td class="gt_row gt_left">row_2</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
    <tr>
      <td class="gt_row gt_right">33.33</td>
      <td class="gt_row gt_left">coconut</td>
      <td class="gt_row gt_left"><div>
              <div style="display:inline-block; float:left; margin-right:0px;">
                  three
                  <div style="height:0.7em; width:0.7em; background-color:#9653ca;border-radius:50%; margin-top:4px; display:inline-block;float:left; margin-right:2px;"></div>
                  <div style="display:inline-block; float:right; line-height:20px; padding:0px 2.5px;"></div>
              </div>
              <div style="position:relative; top:1.2em;">
                  <div><div style="flex-grow:1; margin-left:0px;">  <div style="background:#9653ca; width:2.7827827827827822%; height:4px; border-radius:2px;"></div> </div></div>
              </div>
          </div></td>
      <td class="gt_row gt_right">2015-03-15</td>
      <td class="gt_row gt_right">15:45</td>
      <td class="gt_row gt_right">2018-03-03 03:44</td>
      <td class="gt_row gt_right">1.39</td>
      <td class="gt_row gt_left">row_3</td>
      <td class="gt_row gt_left">grp_a</td>
    </tr>
  </tbody>
  '''
# ---
